# ouvrt

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  Makefile.am  README  README.rst  autogen.sh  configure.ac  meson.build  meson_options.txt
scripts/: ouvrt-cameras.py
src/: ar0134.c  ar0134.h  blobwatch.c  blobwatch.h  buttons.c  buttons.h  camera-dk2.c  camera-dk2.h  camera-v4l2.c  camera-v4l2.h  camera.c  camera.h  dbus.c  dbus.h  debug-gst.c  debug-gst.h  debug.c  debug.h  device.c  device.h  esp570.c  esp570.h  esp770u.c  esp770u.h  flicker.c  flicker.h  gst-optional.h  hidraw.h  hololens-camera.c  hololens-camera.h  hololens-camera2.c  hololens-camera2.h  hololens-hid-reports.h  hololens-imu.c  hololens-imu.h  imu.c  imu.h  json.c  json.h  leds.c  (+69 more)
tools/: dump-eeprom.c  meson.build  record-video.sh
xml/: de.phfuenf.ouvrt.Camera1.xml  de.phfuenf.ouvrt.Radio1.xml  de.phfuenf.ouvrt.Tracker1.xml  meson.build
