# Copyright 2017-2018 Philipp Zabel
# SPDX-License-Identifier:	GPL-2.0+

option(
  'gstreamer',
  type : 'combo',
  value : 'auto',
  choices : ['auto', 'true', 'false'],
  description : 'Use GStreamer'
)
option(
  'opencv',
  type : 'combo',
  value : 'auto',
  choices : ['auto', 'true', 'false'],
  description : 'Use OpenCV'
)
